# atlas

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  STACK.md  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: cd.yml  ci.yml  codeql.yml  eval.yml  pages.yml  terraform.yml
apps/api/: .coverage  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/src/atlas_api/: cli.py  config.py  deps.py  errors.py  logging.py  main.py  mcp_server.py  middleware.py  worker.py
apps/api/src/atlas_api/agents/: __init__.py  graph.py  models.py  nodes.py  providers.py  runner.py  state.py
apps/api/src/atlas_api/auth/: passwords.py  router.py  schemas.py  tokens.py
apps/api/src/atlas_api/breach/: __init__.py  hibp.py  laws.py  playbooks.py
apps/api/src/atlas_api/breach/playbooks/: company.md  drivers_license.md  email.md  financial.md  medical.md  notification_laws.md  passwords.md  ssn.md
apps/api/src/atlas_api/db/: engine.py  models.py
apps/api/src/atlas_api/evals/: __init__.py  __main__.py  harness.py  questions.py
apps/api/src/atlas_api/migrations/: env.py  script.py.mako
apps/api/src/atlas_api/migrations/versions/: 0001_initial.py
apps/api/src/atlas_api/observability/: __init__.py  metrics.py  telemetry.py
apps/api/src/atlas_api/runs/: repository.py  router.py  schemas.py  streaming.py
apps/api/src/atlas_api/security/: __init__.py  guardrails.py  redaction.py
apps/api/src/atlas_api/users/: repository.py  service.py
apps/api/tests/: conftest.py  test_agents.py  test_auth_edge.py  test_auth_flow.py  test_breach.py  test_compose_smoke.md  test_config.py  test_db.py  test_evals.py  test_guardrails.py  test_health.py  test_misc_coverage.py  test_models.py  test_nodes_unit.py  test_observability.py  test_passwords.py  test_redaction.py  test_runs_api.py  test_smoke.py  test_streaming.py  test_tokens.py  test_users.py  test_worker.py
apps/cloudflare/: package-lock.json  package.json  vitest.config.ts  wrangler.jsonc
apps/cloudflare/migrations/: 0001_init.sql  0002_rate_limit.sql
apps/cloudflare/public/: _headers  app.js  architecture.css  architecture.js  index.html  render.js  styles.css
apps/cloudflare/public/.well-known/: security.txt
apps/cloudflare/src/: index.ts
apps/cloudflare/test/: render.test.js  worker.test.ts
apps/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  api.test.ts  api.ts  markdown.test.ts  markdown.ts  styles.css
docs/: README.md  agent-design.md  api-reference.md  architecture.md  compliance.md  cost-notes.md  data-model.md  deployment.md  development.md  documentation-strategy.md  observability.md  runbook.md  security.md  testing.md  threat-model.md
docs/adr/: 0001-cloudflare-vs-aws-editions.md  0002-langgraph-multi-agent.md  0003-sse-redis-streams-not-pubsub.md  0004-keda-for-queue-autoscaling.md  0005-terraform-per-env-state.md
docs/superpowers/plans/: 2026-06-29-atlas-m1.1-backend-foundation.md
docs/superpowers/specs/: 2026-06-29-deep-research-studio-design.md
infra/k8s/: README.md
infra/k8s/atlas/: Chart.yaml  README.md  values.yaml
infra/k8s/atlas/templates/: NOTES.txt  _helpers.tpl  api-deployment.yaml  api-hpa.yaml  api-service.yaml  configmap.yaml  externalsecret.yaml  ingress.yaml  migration-job.yaml  namespace.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  serviceaccount.yaml  worker-deployment.yaml  worker-scaledobject.yaml
infra/local/pgbouncer/: pgbouncer.ini  userlist.txt
infra/terraform/: README.md  versions.tf
infra/terraform/envs/dev/: backend.tf  main.tf  providers.tf  terraform.tfvars.example  variables.tf
(+34 files in other folders)
