[project]
name = "atlas-api"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.138.2",
    "uvicorn[standard]>=0.49",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.31",
    "alembic>=1.18.5",
    "argon2-cffi>=25.1",
    "pyjwt>=2.13",
    "redis>=5.3.1",
    "python-multipart>=0.0.32",
    "httpx>=0.28.1",
    "arq>=0.28",
    "langgraph>=1.2.6",
    "langchain-core>=1.4.8",
    "langchain-anthropic>=1.4.8",
    "anthropic>=0.113",
    "mcp>=1.2.0",
    "prometheus-client>=0.21",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp-proto-http>=1.29",
]

[project.scripts]
firstline-mcp = "atlas_api.mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "testcontainers[postgres,redis]>=4.13",
    "ruff>=0.13",
    "mypy>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["atlas_api"]
# SQLAlchemy's async layer dispatches through greenlets; without this, lines
# executed inside awaited DB calls (e.g. FastAPI route bodies) are mis-attributed
# as uncovered. Tracing greenlets + threads yields accurate measurement.
concurrency = ["thread", "greenlet"]
omit = [
    "src/atlas_api/migrations/*",
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
# B008: FastAPI's Depends()/Query() default pattern is intentional and idiomatic.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]
"src/atlas_api/migrations/versions/**" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["langgraph.*", "langchain_anthropic.*", "mcp.*", "opentelemetry.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["atlas_api.mcp_server"]
disallow_untyped_decorators = false
